--- a/index.css
+++ b/index.css
@@ -86,7 +86,6 @@ align-items: center;
     font-size: larger;
     align-items: center;
     text-align: center;
-    
 
 }
 
@@ -96,6 +95,7 @@ height: 10%;
     display: flex;
 align-items:flex-start ;
 flex-direction: column;
+justify-content: space-between 5px;
 
 }
 
@@ -107,6 +107,7 @@ display: flex;
 align-items:center ;
 flex-direction: column;
 margin: 0px;
+justify-content: space-between 5px;
 }
 
 .segundo{
@@ -117,7 +118,7 @@ display: flex;
 align-items:center ;
 flex-direction: column;
 margin: 0px;
-
+justify-content: space-between 5px;
 }
 
 .tercero{
@@ -127,7 +128,7 @@ margin: 0px;
     align-items:center ;
     flex-direction: column;
     margin: 0px;
-
+    justify-content: space-between 5px;
 
 }
 
@@ -140,6 +141,7 @@ margin: 0px;
     text-align: center;
     height: 25%;
     width: 100%;
+    justify-content: space-between 5px;
 }
 .container2{
     display: flex;
@@ -151,41 +153,143 @@ margin: 0px;
 }
 
 .paso1{
-    height: 33%;
+    height: 42%;
     
     display: flex;
     align-items:center ;
     flex-direction: column;
     margin: 0px;
-
+    justify-content: space-between 5px;
 }
 
 .paso2{
-    height: 33%;
+    height: 42%;
     
     display: flex;
     align-items:center ;
     flex-direction: column;
     margin: 0px;
-
+    justify-content: space-between 5px;
 }
 
 .paso3{
-    height: 33%;
+    height: 42%;
     
     display: flex;
     align-items:center ;
     flex-direction: column;
     margin: 0px;
-
+    justify-content: space-between 5px;
 }
 
 .paso4{
-    height: 33%;
+    height: 42%;
  
     display: flex;
     align-items:center ;
     flex-direction: column;
     margin: 0px;
+    justify-content: space-between 5px;
+}
 
+.contenidop{
+    margin-bottom: 5px;
+align-items: center;
+margin-top: 1px;
+display: inline;
+}
+
+.containerclien{
+margin-top: 130px;
+text-align: center;
+    width: 100%;
+height: 30%;
+align-items: center;
+display: flex;
+justify-content: center;
+color: #fdba3c;
+text-decoration: none;
+font-family: 'Pathway Gothic One', sans-serif;
+font-size: larger;
+}
+
+.clientes{
+    margin-top: 150px;
+
+align-items: center;
+width: 80%;
+height: 300px
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 1px;
+align-items: center;
+width: 100%;
+
+  }
+
+  .imagen{
+height: 250px;
+width: 250px;
+margin: 50px;
+margin-left: 20%;
+display: flex;
+align-items: center;
+
+  }
+
+  .imagen:hover{
+transform: scale(1.3);
+
+  }
+
+  .containerfoot{
+width: 80%;
+height: 250px;
+margin-top: 300px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+color: #fdba3c;
+text-decoration: none;
+font-family: 'Pathway Gothic One', sans-serif;
+font-size: larger;
+text-align: center;
+
+}
+
+  
+
+  .foot1{
+    width: 50%;
+    height: 250px;
+    margin-left: 550px;
+    display: flex;
+   flex-direction: column;
+align-items: flex-start;
+
+  }
+
+
+.foot2{
+    width: 50%;
+    height: 250px;
+    margin-left: 350px;
+    display: flex;
+   flex-direction:column;
+align-items: flex-start;
+
+}
+
+.imgfoot{
+
+    height: 32px;
+    width: 32px;
+}
+
+.contactotitulo{
+
+    display: inline;
 }
